--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "generate": "npx codegen generate -l typescript-server -i ./specs/rtu-presence-oas.yml -o src/generated/"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.10.3",
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.3",
+    "lucide-react": "^0.294.0",
+    "md5": "^2.3.0",
     "next": "14.0.3",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "3.3.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.2"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "swagger-codegen": "git+https://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:x-oauth-basic@github.com/vbarzana/swagger-tools.git"
   }
 }
