--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "generate": "npx codegen generate -l typescript-server -i ./specs/rtu-presence-oas.yml -o src/generated/"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -31,7 +30,6 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
-    "@types/md5": "^2.3.5",
-    "swagger-codegen": "git+https://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:x-oauth-basic@github.com/vbarzana/swagger-tools.git"
+    "@types/md5": "^2.3.5"
   }
 }
